--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -7,15 +7,11 @@
 {% endblock%}
 
 {% block content%}
-
-    <h1>Book List</h1>
-    <ul>
-        {% for book in books %}
-         <li>
-            <a href="">{{ book.title }}</a>
-            <p>Author: {{ book.author }}</p>
-            <p> rating: {{ book.rating }}</p>
-         </li>
-        {% endfor %}
-        </ul>
+<h1>Our Books</h1>
+<ul>
+    {% for book in books %}
+    <li>
+        <a href = "{{book.get_absolute_url}}"> {{book.title}}</a>
+    </li>
+    {% endfor %}
 {% endblock %}
